--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "expo": "~52.0.20",
+    "expo-image-picker": "^16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native/metro-config": "^0.76.5",
     "@types/react": "~18.3.12",
+    "metro-config": "^0.81.0",
     "typescript": "^5.3.3"
   },
   "private": true
