--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aaa",
+  "name": "gallery",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,7 +14,8 @@
     "expo-image-picker": "^16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
