--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native/metro-config": "^0.76.5",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.20",
     "expo-image-picker": "^16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-awesome-gallery": "^0.4.3",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-photos-gallery": "^0.0.1",
+    "react-native-reanimated": "^3.16.6",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@react-native/metro-config": "^0.76.5",
+    "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "metro-config": "^0.81.0",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
