--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-awesome-gallery": "^0.4.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-photos-gallery": "^0.0.1",
     "react-native-reanimated": "^3.16.6",
